--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
     "@types/chai": "^4.3.3",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^18.8.5",
     "chai": "^4.3.6",
     "dotenv": "^16.0.3",
