--- a/.github/workflows/ci2.yaml
+++ b/.github/workflows/ci2.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Echo secret
-        uses: echo ${{ secrets.DOCKERHUB_USERNAME }}
+        run: echo ${{ secrets.DOCKERHUB_USERNAME }}
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
